# Multi_AI_Agent

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/backend/: llm_explainer.py  pdf_report.py  rules.py  xaml_parser.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: main.py  streamlit_app.py
